backporting TRUNK-2051 to branches/1.6.x - fixed ever-present horizontal scrollbar in chrome (IE and FF still work)
git-svn-id: http://svn.openmrs.org/openmrs/branches/1.6.x@18473 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/web/openmrs.css
+++ b/web/openmrs.css
@@ -56,14 +56,10 @@ a:hover {
 }
 
 #userBar {
-	position: absolute;
-	top: 0px;
-	left: 0px;
 	text-align: right;
 	padding: 0px 3px 0px 3px;
 	margin: 0px;
 	z-index: 5;
-	width: 100%;
 	color: #333333;
 	line-height: 26px;
 	background-color: #ffffff;
@@ -136,7 +132,6 @@ a:hover {
 	
 #content {
 	margin: 0px 0 0 0;
-	width: 100%;
 	padding: 60px 10px 10px 10px;
 	font-size: 1.2em;
 	background-color: #ffffff;
